fix: also allow long preset names that can't be hyphenated to wrap

--- a/assets/css/_presets.scss
+++ b/assets/css/_presets.scss
@@ -17,6 +17,7 @@
           text-decoration-line: underline;
           text-align: start;
           hyphens: auto;
+          overflow-wrap: anywhere;
         }
       }
 
